Tue Jan  2 20:59:17 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - powerpanel: add new driver for CyberPower text protocol UPS (should
   obsolete 'cpsups' and 'nitram' when it is confirmed it works for
   all currently supported models) 

Tue Jan  2 01:52:40 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec: changed driver banner to include the contents of "progname"
 - cpsups.c: added missing "sys/ioctl.h" that was breaking the build
 - megatec.8, al175.8: fixed broken name section ("\(hy" instead of "\-")
   as detected by doclifter (http://catb.org/~esr/doclifter/)

Mon Jan  1 20:54:18 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - docs/new-names.txt: added ups.realpower, ups.realpower.nominal,
   input.frequency.low, input.frequency.high and battery.capacity

Sat Dec 30 20:54:53 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/cpsups.c: updated version from Doug Reynolds

Sat Dec 30 20:39:25 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/al175.c: insert 'broken_driver = 1' (see comments in source)

Fri Dec 29 11:30:21 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/common.c: stupid typo

Fri Dec 29 11:15:10 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/common.c, clients/upssched.c: check for errors just in case something
   goes horribly wrong with duplicating file handles

Fri Dec 29 10:52:47 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/everups.c: replace %m (glibc extension)

Fri Dec 29 07:13:46 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - drivers/Makefile.am: removed unnecessary CFLAGS that caused
   redundant object files to be created for HAL.

Fri Dec 29 07:06:52 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - configure.in: fixed bug that prevented USB drivers from being built

Fri Dec 29 07:00:46 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - removed unnecessary Makefile from m4/
